--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "openai",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "name": "open-api",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "tsx index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "openai": "^4.29.2"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "tsx": "^4.7.1"
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "openai": "^4.33.0"
   }
 }
